Set usePreview = true for all keyboards

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<script>
 		$(function(){
 			$('#qwerty').keyboard({
-			usePreview: false,
+			usePreview: true,
 		useCombos: false,
 		autoAccept: true,
 		layout: 'qwerty',
@@ -41,7 +41,7 @@
 		
 		$(function(){
 			$('#random').keyboard({
-			usePreview: false,
+			usePreview: true,
 			useCombos: false,
 			autoAccept: true,
 			layout: 'custom',
@@ -71,7 +71,7 @@
 		
 		$(function(){
 			$('#solution2').keyboard({
-			usePreview: false,
+			usePreview: true,
 			useCombos: false,
 			autoAccept: true,
 			layout: 'custom',
