Updated better solution

--- a/index.html
+++ b/index.html
@@ -108,16 +108,16 @@
 			customLayout: {
 				'normal': [
 					'` 1 2 3 4 5 6 7 8 9 0 - = {del} {b}',
-					'{tab} q x g u j v c h k b [ ] \\',
-					'z e a o f s t y r ; \' {enter}',
-					'{shift} w p i m l n d , . / {shift}',
+					'{tab} z f o p j b k r y m [ ] \\',
+					'x i a u q h t s l ; \' {enter}',
+					'{shift} w e g v c n d , . / {shift}',
 					'{accept} {space} {left} {right} {undo:Undo} {redo:Redo}'
 				],
 				'shift': [
 					'~ ! @ # $ % ^ & * ( ) _ + {del} {b}',
-					'{tab} Q X G U J V C H K B { } |',
-					'Z E A O F S T Y R : " {enter}',
-					'{shift} W P I M L N D < > ? {shift}',
+					'{tab} Z F O P J B K R Y M { } |',
+					'X I A U Q H T S L : " {enter}',
+					'{shift} W E G V C N D < > ? {shift}',
 					'{accept} {space} {left} {right} {undo:Undo} {redo:Redo}'
 				]
 			},
